--- a/Portfolio-Work.html
+++ b/Portfolio-Work.html
@@ -14,6 +14,8 @@
       <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">Works</a>
       <!-- <li class="navitem">Features</li> -->
       <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">Features</a>
+      <!-- home button-->
+      <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio.html">Home</a>
       <!-- <li class="navitem">IMA</li> -->
       <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
       <!-- <li class="navitem">Me</li> -->
