--- a/Portfolio-Me.html
+++ b/Portfolio-Me.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="Portfolio-Me.css">
+    <!-- avenirlight -->
+    <link rel="stylesheet" type="text/css" href="Portfolio.css">
     <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
   </head>
 
@@ -23,6 +25,8 @@
       </ul>
     </nav>
 
-    <h1> It's Me! </h1>
+    <p> Hello! <span class="about">I am Isabelle (or Izzy). I'm 19. Born and raised in the Silicon Valley. I am studying interactive media arts at NYU, investing the intersection of tech and art. I like to take the ordinary and make the unexpected. And just play!
+      </span>
+    </p>
 
   </body>
