--- a/Portfolio-Me.html
+++ b/Portfolio-Me.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="Portfolio-Me.css">
     <!-- avenirlight -->
-    <link rel="stylesheet" type="text/css" href="Portfolio.css">
+    <!-- <link rel="stylesheet" type="text/css" href="AvenirLight.css"> -->
     <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
   </head>
 
@@ -25,8 +25,14 @@
       </ul>
     </nav>
 
-    <p> Hello! <span class="about">I am Isabelle (or Izzy). I'm 19. Born and raised in the Silicon Valley. I am studying interactive media arts at NYU, investing the intersection of tech and art. I like to take the ordinary and make the unexpected. And just play!
+    <p> Hello! <span class="about">I am Isabelle (or Izzy).I am studying interactive media arts at NYU, investing the intersection of tech and art. I like to take the ordinary and make the unexpected. And just play!
       </span>
     </p>
+
+    <p> Contact Me! <span class="contact">isabelle.rieken@gmail.com
+
+    <a class="socialmedia" href="https://www.instagram.com/isabelle_rieken/">instagram</a>
+    <a class="socialmedia" href="https://www.linkedin.com/in/isabelle-r-1a2302138/">linkedin</a>
+    <a class="socialmedia" href="https://github.com/izzyrieken">github</a>
 
   </body>
