--- a/Portfolio-Me.html
+++ b/Portfolio-Me.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="Portfolio-Me.css">
     <!-- avenirlight -->
-    <!-- <link rel="stylesheet" type="text/css" href="AvenirLight.css"> -->
-    <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
+    <link rel="stylesheet" type="text/css" href="AvenirLight.css">
+    <link rel="stylesheet" type="text/css" href="Portfolio-Me.css">
+
   </head>
 
   <body>
@@ -17,7 +17,7 @@
         <!-- <li class="navitem">Features</li> -->
         <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">Features</a>
         <!-- home button-->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio.html">Home</a>
+        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-home.html">Home</a>
         <!-- <li class="navitem">IMA</li> -->
         <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
         <!-- <li class="navitem">Me</li> -->
@@ -28,6 +28,8 @@
     <p> Hello! <span class="about">I am Isabelle (or Izzy).I am studying interactive media arts at NYU, investing the intersection of tech and art. I like to take the ordinary and make the unexpected. And just play!
       </span>
     </p>
+
+    <img src="Prof1.jpg" alt="Profile Picture">
 
     <p> Contact Me! <span class="contact">isabelle.rieken@gmail.com
 
