--- a/Portfolio-home.html
+++ b/Portfolio-home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="Portfolio.css">
+    <link rel="stylesheet" type="text/css" href="Portfolio-home.css">
     <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
   </head>
 
