--- a/Portfolio-Work.html
+++ b/Portfolio-Work.html
@@ -11,17 +11,28 @@
   <nav class="navbar">
     <ul class="nav">
       <!-- <li class="navitem">Works</li> -->
-      <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">Works</a>
+      <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">WORKS</a>
       <!-- <li class="navitem">Features</li> -->
-      <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">Features</a>
+      <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">FEATURES</a>
       <!-- home button-->
-      <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio.html">Home</a>
+      <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-home.html">HOME</a>
       <!-- <li class="navitem">IMA</li> -->
       <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
       <!-- <li class="navitem">Me</li> -->
-      <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">Me</a>
+      <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">ME</a>
     </ul>
   </nav>
+
+  <div class="masonry">
+    <img class="item" src="spherror.jpg" alt="projection mapping installation">
+    <img class="item" src="tilt.jpg" alt="sewn mesh dress">
+    <img class="item" src="slimthicc.jpeg" alt="card topographical map of female figure">
+    <img class="item" src="pointy.jpg" alt="Spine structure dress">
+    <img class="item" src="chocoFinal.jpg" alt="chocolate body parts">
+    <img class="item" src="cardboard.jpg" alt="cardboard dress">
+    <div style="padding:55.05% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/395968480?autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  </div>
+
 </body>
 
 </html>
