--- a/Portfolio-Me.html
+++ b/Portfolio-Me.html
@@ -5,6 +5,7 @@
     <!-- avenirlight -->
     <link rel="stylesheet" type="text/css" href="AvenirLight.css">
     <link rel="stylesheet" type="text/css" href="Portfolio-Me.css">
+    <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
 
   </head>
 
@@ -13,15 +14,15 @@
     <nav class="navbar">
       <ul class="nav">
         <!-- <li class="navitem">Works</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">Works</a>
+        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">WORKS</a>
         <!-- <li class="navitem">Features</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">Features</a>
+        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">FEATURES</a>
         <!-- home button-->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-home.html">Home</a>
+        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-home.html">HOME</a>
         <!-- <li class="navitem">IMA</li> -->
         <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
         <!-- <li class="navitem">Me</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">Me</a>
+        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">ME</a>
       </ul>
     </nav>
 
