--- a/Portfolio-features.html
+++ b/Portfolio-features.html
@@ -11,15 +11,15 @@
       <ul class="nav">
 
         <!-- <li class="navitem">Works</li> -->
-        <a class="navitem" href="Portfolio-Work.html">Works</a>
+        <a class="navitem" href="Portfolio-Work.html">WORKS</a>
         <!-- <li class="navitem">Features</li> -->
-        <a class="navitem" href="Portfolio-features.html">Features</a>
+        <a class="navitem" href="Portfolio-features.html">FEATURES</a>
         <!-- home button-->
-        <a class="navitem" href="Portfolio-home.html">Home</a>
+        <a class="navitem" href="Portfolio-home.html">HOME</a>
         <!-- <li class="navitem">IMA</li> -->
         <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
         <!-- <li class="navitem">Me</li> -->
-        <a class="navitem" href="Portfolio-Me.html">Me</a>
+        <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
     </nav>
 
