--- a/Portfolio-home.html
+++ b/Portfolio-home.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="Portfolio-home.css">
     <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
+
   </head>
 
   <body>
@@ -12,13 +13,13 @@
       <ul class="nav">
 
         <!-- <li class="navitem">Works</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">Works</a>
+        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">WORKS</a>
         <!-- <li class="navitem">Features</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">Features</a>
+        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">FEATURES</a>
         <!-- <li class="navitem">IMA</li> -->
         <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
         <!-- <li class="navitem">Me</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">Me</a>
+        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">ME</a>
       </ul>
     </nav>
 
