--- a/featurepage-WS.html
+++ b/featurepage-WS.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="Portfolio-features.css">
+    <link rel="stylesheet" type="text/css" href="featurepage.css">
     <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
   </head>
 
@@ -22,12 +22,3 @@
         <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
     </nav>
-
-    <p>
-      <a href="featurepage-WS.html">ITP Winter Show <span class="smallfont">Exhibition//December, 2019</span><br/></a>
-      <a href="featurepage-CT.html">Coding Train <span class="smallfont">Live Stream//December, 2019</span> <br/></a>
-      <a href="featurepage-IT.html">NYU IT  <span class="smallfont">Youtube//December, 2019</span><br/></a>
-      <a href="featurepage-RW.html">The Roar Within <span class="smallfont">Gallery//March, 2020</span><br/></a>
-    </p>
-
-  </body>
