--- a/Portfolio-Me.html
+++ b/Portfolio-Me.html
@@ -26,13 +26,21 @@
       </ul>
     </nav>
 
-    <p> Hello! <span class="about">I am Isabelle (or Izzy).I am studying interactive media arts at NYU, investing the intersection of tech and art. I like to take the ordinary and make the unexpected. And just play!
-      </span>
+    <div id="circle">
+      <div class="topmargin">
+    <img src="prof3.png" alt="Profile Picture" class="curve">
+
+    <p></br></br></br>It's Me!</br></br></br><span class="about">I am Isabelle (or Izzy).I am studying interactive media arts at NYU, interested the intersection of tech and art. I like to take the ordinary and make the unexpected and just play!
+      </span></br></br></br></br>
+      Let's Talk!</br></br></br>
+      <span class="about">isabelle.rieken@gmail.com</span>
     </p>
+  </div>
+  </div>
 
-    <img src="Prof1.jpg" alt="Profile Picture">
 
-    <p> Contact Me! <span class="contact">isabelle.rieken@gmail.com
+
+    <p> <span class="contact"></span></p>
 
     <a class="socialmedia" href="https://www.instagram.com/isabelle_rieken/">instagram</a>
     <a class="socialmedia" href="https://www.linkedin.com/in/isabelle-r-1a2302138/">linkedin</a>
