--- a/featurepage-CT.html
+++ b/featurepage-CT.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="AvenirLight.css">
     <link rel="stylesheet" type="text/css" href="featurepage.css">
     <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
   </head>
@@ -22,3 +23,10 @@
         <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
     </nav>
+
+    <iframe  src="https://www.youtube.com/embed/11M3RLmayz8?controls=0&amp;start=7123" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+
+    <p> "Spherror" featured in Dan Shiffman's annual livestream of the 2019 <span class="links"><a href="https://itp.nyu.edu/shows/winter2019/">IMA/ITP Winter Show</a></span> on his channel <a href="https://www.youtube.com/user/shiffman">The Coding Train</a>. </br> My partner, Julia Fernandez is shown in the video.
+    </p>
+</html>
