--- a/featurepage-RW.html
+++ b/featurepage-RW.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="AvenirLight.css">
     <link rel="stylesheet" type="text/css" href="featurepage.css">
     <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
   </head>
@@ -22,3 +23,12 @@
         <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
     </nav>
+
+    <p>
+      Open: March 4-April 24, 2020
+
+      Rivefront Art Gallery//curated by Haifa Bint-Kad
+
+      “Sexism has never rendered women powerless.  It has either suppressed their strength or exploited it.”  -Bell Hooks
+      During Women’s History Month we are exhibiting large works by women that dynamically showcase the power of female creative expression. We will feature works that challenge notions of what the feminine is, gender identities, definitions and the evolution of family structures.
+    </p>
