--- a/featurepage-WS.html
+++ b/featurepage-WS.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="AvenirLight.css">
     <link rel="stylesheet" type="text/css" href="featurepage.css">
     <link rel="stylesheet" href="https://use.typekit.net/gnn0ncm.css">
   </head>
@@ -22,3 +23,5 @@
         <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
     </nav>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/E8pOwjoHsZo?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
