--- a/featurepage-IT.html
+++ b/featurepage-IT.html
@@ -26,3 +26,7 @@
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/P12Sv3L8PlY?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
+
+    <p>Interview with NYU's <a href="https://www.nyu.edu/life/information-technology/about-nyu-it.html">Information Technology</a> online journal about "Spherror" in the 2019 IMA/ITP Winter Show. (0:19)</p>
+
+</html>
