--- a/featurepage-WS.html
+++ b/featurepage-WS.html
@@ -25,3 +25,7 @@
     </nav>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/E8pOwjoHsZo?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p>The <a href="https://itp.nyu.edu/shows/winter2019/">ITP Winter Show</a> is a two day exhibition of recent creative interactive projects by the students of ITP and IMA. "Spherror", our final project was on display.</p>
+
+  </html>
