--- a/Portfolio-Me.html
+++ b/Portfolio-Me.html
@@ -25,7 +25,16 @@
         <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">ME</a>
       </ul>
     </nav>
-
+<!-- 
+    <svg viewBox="0 0 500 500">
+      <path id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
+      <text width="500">
+        <textPath alignment-baseline="top" xlink:href="#curve">
+          Dangerous Curves Ahead
+        </textPath>
+      </text>
+    </svg>
+     -->
     <div id="circle">
       <div class="topmargin">
     <img src="prof3.png" alt="Profile Picture" class="curve">
