--- a/Portfolio-Work.html
+++ b/Portfolio-Work.html
@@ -26,18 +26,41 @@
 
   <div class="masonry">
 
-    <img class="item" src="spherror.jpg" alt="projection mapping installation">
-    <img class="item" src="tilt.jpg" alt="sewn mesh dress">
-
     <div class="container">
-      <a href="workpage-slimthicc.html"><img class="item"  src="slimthicc.jpeg" alt="card topographical map of female figure"></a>
-        <p class="overlay text">Slim Thicc</p>
+      <img class="item" src="spherror.jpg" alt="projection mapping installation">
+      <p class="overlay text">Spherror</p>
     </div>
 
-    <img class="item" src="pointy.jpg" alt="Spine structure dress">
-    <img class="item" src="chocoFinal.jpg" alt="chocolate body parts">
-    <img class="item" src="cardboard.jpg" alt="cardboard dress">
-    <div style="padding:55.05% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/395968480?autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:110%;height:110%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    <div class="container">
+      <img class="item" src="tilt.jpg" alt="sewn mesh dress">
+      <p class="overlay text">Tilt</p>
+    </div>
+
+    <div class="container">
+      <p class="overlay text">Slim</br>Thicc</p>
+      <a href="workpage-slimthicc.html"><img class="item"  src="slimthicc.jpeg" alt="card topographical map of female figure"></a>
+
+      </div>
+
+    <div class="container">
+      <img class="item" src="pointy.jpg" alt="Spine structure dress">
+      <p class="overlay text">Unwanted Advances</p>
+    </div>
+
+    <div class="container">
+      <img class="item" src="chocoFinal.jpg" alt="chocolate body parts">
+      <p class="overlay text">Sweet Nectar</p>
+    </div>
+
+    <div class="container">
+      <img class="item" src="cardboard.jpg" alt="cardboard dress">
+      <p class="overlay text">Corrugated Couture</p>
+    </div>
+
+    <div class="container">
+      <div style="padding:55.05% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/395968480?autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:110%;height:110%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      <p class="overlay text">Existance</p>
+    </div>
   </div>
 
 
