--- a/Portfolio-Work.html
+++ b/Portfolio-Work.html
@@ -27,39 +27,38 @@
   <div class="masonry">
 
     <div class="container">
-      <img class="item" src="spherror.jpg" alt="projection mapping installation">
       <p class="overlay text">Spherror</p>
+      <img class="item" src="spherror.jpg" alt="projection mapping installation">
     </div>
 
     <div class="container">
-      <img class="item" src="tilt.jpg" alt="sewn mesh dress">
       <p class="overlay text">Tilt</p>
+      <a href="workpage-tilt.html"><img class="item" src="tilt.jpg" alt="sewn mesh dress"></a>
     </div>
 
     <div class="container">
       <p class="overlay text">Slim</br>Thicc</p>
       <a href="workpage-slimthicc.html"><img class="item"  src="slimthicc.jpeg" alt="card topographical map of female figure"></a>
-
-      </div>
+    </div>
 
     <div class="container">
-      <img class="item" src="pointy.jpg" alt="Spine structure dress">
       <p class="overlay text">Unwanted Advances</p>
+      <img class="item" src="pointy.jpg" alt="Spine structure dress">
     </div>
 
     <div class="container">
-      <img class="item" src="chocoFinal.jpg" alt="chocolate body parts">
       <p class="overlay text">Sweet Nectar</p>
+      <img class="item" src="chocoFinal.jpg" alt="chocolate body parts">
     </div>
 
     <div class="container">
-      <img class="item" src="cardboard.jpg" alt="cardboard dress">
       <p class="overlay text">Corrugated Couture</p>
+      <img class="item" src="cardboard.jpg" alt="cardboard dress">
     </div>
 
     <div class="container">
-      <div style="padding:55.05% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/395968480?autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:110%;height:110%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <p class="overlay text">Existance</p>
+      <div style="padding:55.05% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/395968480?autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:110%;height:110%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     </div>
   </div>
 
