--- a/Portfolio-Work.html
+++ b/Portfolio-Work.html
@@ -28,7 +28,7 @@
 
     <div class="container">
       <p class="overlay text">Spherror</p>
-      <img class="item" src="spherror.jpg" alt="projection mapping installation">
+      <a href="workpage-spherror.html"><img class="item" src="spherror.jpg" alt="projection mapping installation"></a>
     </div>
 
     <div class="container">
