--- a/Portfolio-Work.html
+++ b/Portfolio-Work.html
@@ -43,7 +43,7 @@
 
     <div class="container">
       <p class="overlay text">Unwanted Advances</p>
-      <img class="item" src="pointy.jpg" alt="Spine structure dress">
+      <a href="workpage-unwantedadvances.html"><img class="item" src="ua.jpg" alt="Spine structure dress"></a>
     </div>
 
     <div class="container">
