--- a/Portfolio-Work.html
+++ b/Portfolio-Work.html
@@ -48,7 +48,7 @@
 
     <div class="container">
       <p class="overlay text">Sweet Nectar</p>
-      <img class="item" src="chocoFinal.jpg" alt="chocolate body parts">
+      <a href="workpage-sweetnectar.html"><img class="item" src="sn.jpg" alt="chocolate body parts"></a>
     </div>
 
     <div class="container">
