--- a/Portfolio-Work.html
+++ b/Portfolio-Work.html
@@ -53,7 +53,7 @@
 
     <div class="container">
       <p class="overlay text">Corrugated Couture</p>
-      <img class="item" src="cardboard.jpg" alt="cardboard dress">
+      <a href="workpage-corrugated.html"><img class="item" src="cc.jpg" alt="cardboard dress"></a>
     </div>
 
     <div class="container">
