--- a/Portfolio-Work.html
+++ b/Portfolio-Work.html
@@ -27,39 +27,42 @@
   <div class="masonry">
 
     <div class="container">
-      <p class="overlay text">Spherror</p>
+      <p class="overlay text yellow">Spherror</p>
       <a href="workpage-spherror.html"><img class="item" src="spherror.jpg" alt="projection mapping installation"></a>
     </div>
 
     <div class="container">
-      <p class="overlay text">Tilt</p>
+      <p class="overlay text red">Tilt</p>
       <a href="workpage-tilt.html"><img class="item" src="tilt.jpg" alt="sewn mesh dress"></a>
     </div>
 
     <div class="container">
-      <p class="overlay text">Slim</br>Thicc</p>
+      <p class="overlay text purple">Slim</br>Thicc</p>
       <a href="workpage-slimthicc.html"><img class="item"  src="slimthicc.jpeg" alt="card topographical map of female figure"></a>
     </div>
 
     <div class="container">
-      <p class="overlay text">Unwanted Advances</p>
+      <p class="overlay text yellow">Unwanted Advances</p>
       <a href="workpage-unwantedadvances.html"><img class="item" src="ua.jpg" alt="Spine structure dress"></a>
     </div>
 
     <div class="container">
-      <p class="overlay text">Sweet Nectar</p>
+      <p class="overlay text red">Sweet Nectar</p>
       <a href="workpage-sweetnectar.html"><img class="item" src="sn.jpg" alt="chocolate body parts"></a>
     </div>
 
     <div class="container">
-      <p class="overlay text">Corrugated Couture</p>
-      <a href="workpage-corrugated.html"><img class="item" src="cc.jpg" alt="cardboard dress"></a>
+      <p class="overlay text yellow">Existance</p>
+      <a href="workpage-existed.html"><img class="item" src="existed.png" alt="cardboard dress"></a>
     </div>
 
     <div class="container">
-      <p class="overlay text">Existance</p>
-      <div style="padding:55.05% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/395968480?autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:110%;height:110%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      <p class="overlay text purple">Corrugated Couture</p>
+      <a href="workpage-corrugated.html"><img class="item" src="cc.jpg" alt="cardboard dress"></a>
     </div>
+
+
+
   </div>
 
 
