--- a/Portfolio-Me.html
+++ b/Portfolio-Me.html
@@ -13,19 +13,14 @@
 
     <nav class="navbar">
       <ul class="nav">
-        <!-- <li class="navitem">Works</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">WORKS</a>
-        <!-- <li class="navitem">Features</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">FEATURES</a>
-        <!-- home button-->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-home.html">HOME</a>
-        <!-- <li class="navitem">IMA</li> -->
+        <a class="navitem" href="Portfolio-Work.html">WORKS</a>
         <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
-        <!-- <li class="navitem">Me</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">ME</a>
+        <a class="navitem" href="Portfolio-home.html">HOME</a>
+        <a class="navitem" href="Portfolio-features.html">PRESS</a>
+        <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
     </nav>
-<!-- 
+<!--
     <svg viewBox="0 0 500 500">
       <path id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
       <text width="500">
