--- a/featurepage-RW.html
+++ b/featurepage-RW.html
@@ -10,25 +10,19 @@
 
     <nav class="navbar">
       <ul class="nav">
-
-        <!-- <li class="navitem">Works</li> -->
         <a class="navitem" href="Portfolio-Work.html">WORKS</a>
-        <!-- <li class="navitem">Features</li> -->
-        <a class="navitem" href="Portfolio-features.html">FEATURES</a>
-        <!-- home button-->
-        <a class="navitem" href="Portfolio-home.html">HOME</a>
-        <!-- <li class="navitem">IMA</li> -->
         <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
-        <!-- <li class="navitem">Me</li> -->
+        <a class="navitem" href="Portfolio-home.html">HOME</a>
+        <a class="navitem" href="Portfolio-features.html">PRESS</a>
         <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
     </nav>
 
-    <p>
-      Open: March 4-April 24, 2020
+    <p class="onlytext">
+      <a class="https://www.ypl.org/artgallery/">Rivefront Art Gallery</a>//"The Roar Within"</br>
+      Dates: March 4-April 24, 2020</br>
+      Artwork on Display: <a class="workpage-slimthicc">Slim Thicc</a></br></br>
 
-      Rivefront Art Gallery//curated by Haifa Bint-Kad
-
-      “Sexism has never rendered women powerless.  It has either suppressed their strength or exploited it.”  -Bell Hooks
+      Gallery Statement: “Sexism has never rendered women powerless.  It has either suppressed their strength or exploited it.”  -Bell Hooks
       During Women’s History Month we are exhibiting large works by women that dynamically showcase the power of female creative expression. We will feature works that challenge notions of what the feminine is, gender identities, definitions and the evolution of family structures.
     </p>
