--- a/workpage-spherror.html
+++ b/workpage-spherror.html
@@ -9,16 +9,11 @@
   <body>
     <nav class="navbar">
       <ul class="nav">
-        <!-- <li class="navitem">Works</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">WORKS</a>
-        <!-- <li class="navitem">Features</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">FEATURES</a>
-        <!-- home button-->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-home.html">HOME</a>
-        <!-- <li class="navitem">IMA</li> -->
+        <a class="navitem" href="Portfolio-Work.html">WORKS</a>
         <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
-        <!-- <li class="navitem">Me</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">ME</a>
+        <a class="navitem" href="Portfolio-home.html">HOME</a>
+        <a class="navitem" href="Portfolio-features.html">PRESS</a>
+        <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
     </nav>
 
@@ -28,6 +23,6 @@
     <h1>Spherror</h1>
     <p>dimensions: 5'x5'x1'</br>date: December, 2019</br>materials: polystyrene spheres, webcam, projector</br>software:P5, Madmapper, Syphoner</br></br>The project is a commentary on vanity, fascination with one’s self. The project is playful because it is a fun interactive installation that anyone can use, but it is also uncanny and even uncomfortable because it dissects, exposes, and magnifies your face. Though people love looking at themselves, how will they feel when their faces are distorted in such a way?</p>
 
-    
+
 
 </html>
