--- a/Portfolio-home.html
+++ b/Portfolio-home.html
@@ -11,15 +11,11 @@
 
     <nav class="navbar">
       <ul class="nav">
-
-        <!-- <li class="navitem">Works</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Work.html">WORKS</a>
-        <!-- <li class="navitem">Features</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-features.html">FEATURES</a>
-        <!-- <li class="navitem">IMA</li> -->
+        <a class="navitem" href="Portfolio-Work.html">WORKS</a>
         <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
-        <!-- <li class="navitem">Me</li> -->
-        <a class="navitem" href="file:///Users/ir/Documents/Midterm-Portfolio/Portfolio-Me.html">ME</a>
+        <a class="navitem" href="Portfolio-home.html">HOME</a>
+        <a class="navitem" href="Portfolio-features.html">PRESS</a>
+        <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
     </nav>
 
