--- a/Portfolio-Me.html
+++ b/Portfolio-Me.html
@@ -46,8 +46,9 @@
 
     <p> <span class="contact"></span></p>
 
-    <a class="socialmedia" href="https://www.instagram.com/isabelle_rieken/">instagram</a>
-    <a class="socialmedia" href="https://www.linkedin.com/in/isabelle-r-1a2302138/">linkedin</a>
+
+    <a class="socialmedia" href="https://www.instagram.com/isabelle_rieken/">instagram·</a>
+    <a class="socialmedia" href="https://www.linkedin.com/in/isabelle-r-1a2302138/">linkedin·</a>
     <a class="socialmedia" href="https://github.com/izzyrieken">github</a>
 
   </body>
