--- a/workpage-unwantedadvances.html
+++ b/workpage-unwantedadvances.html
@@ -11,7 +11,7 @@
       <ul class="nav">
         <a class="navitem" href="Portfolio-Work.html">WORKS</a>
         <a class="navitem" href="https://www.isabellerieken.com/blog">IMA</a>
-        <a class="navitem" href="Portfolio-home.html">HOME</a>
+        <a class="navitem" href="index.html">HOME</a>
         <a class="navitem" href="Portfolio-features.html">PRESS</a>
         <a class="navitem" href="Portfolio-Me.html">ME</a>
       </ul>
